--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-8">
-                      <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img1.jpg"></div>
+                      <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img1.jpg"></a>
                     </div>
                     <div class="col-md-4">
                       <div class="item__content">
@@ -89,7 +89,7 @@
               <div class="row">
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img2.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img2.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">Марафон «Налибоки '16»</a></h3><a class="item__descr" href="#">Любительский марафон</a>
                       <div class="item__text">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img3.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img3.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">Страховский веломарафон</a></h3><a class="item__descr" href="#">Кросс-кантри</a>
                       <div class="item__text">
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img4.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img4.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">Кубок марафонов</a></h3><a class="item__descr" href="#">Любительский марафон</a>
                       <div class="item__text">
@@ -133,7 +133,7 @@
                 <div class="clearfix hidden-sm hidden-xs"></div>
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img5.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img5.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">Марафон «Медвежино»</a></h3><a class="item__descr" href="#">Кросс-кантри</a>
                       <div class="item__text">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img6.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img6.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">«Время героев»</a></h3><a class="item__descr" href="#">Поисково-спасательные работы</a>
                       <div class="item__text">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <div class="item item_small">
-                    <div class="item__image-wrapper"><img class="item__image img-responsive" src=" img/img7.jpg"></div>
+                    <a class="item__image-wrapper" href="#"><img class="item__image img-responsive" src=" img/img7.jpg"></a>
                     <div class="item__content-wrapper">
                       <h3 class="item__title"><a class="item__title__link" href="#">Летняя коллекция</a></h3><a class="item__descr" href="#">Игра-квест</a>
                       <div class="item__text">
